# GerenciamentoRedes

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  readme.md
sql/: schema.sql
src/gerenciamento_redes/: __init__.py  cli.py  config.py  db.py  main.py  models.py
src/gerenciamento_redes/repositories/: __init__.py  device_repository.py
src/gerenciamento_redes/services/: __init__.py  network_service.py
tests/: test_config.py  test_network_service.py
