[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gerenciamento-redes"
version = "0.1.0"
description = "Estrutura inicial para software de gerenciamento de rede com Python e MySQL."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = ["mysql-connector-python"]

[project.scripts]
gerencia-redes = "gerenciamento_redes.main:main"

[tool.setuptools.packages.find]
where = ["src"]
